add feed references in template

--- a/templates/default.html
+++ b/templates/default.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="/css/default.css" />
     <link rel="stylesheet" href="/css/font.css" />
     <link rel="icon" type="image/svg+xml" href="/images/Chaoszone.svg">
+
+    <!-- RSS -->
+    <link rel="alternate" type="application/rss+xml" title="Chaoszone news" href="/rss.xml">
+
+    <!-- ATOM -->
+    <link rel="alternate" type="application/atom+xml" title="Chaoszone news" href="/atom.xml">
+
   </head>
   <body>
     <div id="logo">
