--- a/themes/zone3/layouts/partials/footer.html
+++ b/themes/zone3/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
 	<div class="container">		
 		<div>
-			If you want to talk to the people behind ChaosZone, head on over to <a href="https://app.element.io/#/room/#chaoszone:matrix.eigenbaukombinat.de">our Matrix Channel</a>
+			If you want to talk to the people behind ChaosZone, head on over to <a href="/matrix">our Matrix Channel</a>
 		</div>
 		
 		<div>
