--- a/themes/zone3/layouts/_default/list.html
+++ b/themes/zone3/layouts/_default/list.html
@@ -1,18 +1,21 @@
-{{ partial "header.html" . }}
+{{ define "main" }}
 
-<h1>{{ .Title }}</h1>
 
-{{ .Content }}
+<section class="container">
 
-{{ range.Data.Pages }}
-<article class="post-snippet">
-  <h3>
-    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-  </h3>
-	<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
-		{{ .Date.Format "January 2, 2006" }}
-	</time>
-</article>
+
+  <h1>{{ .Title }}</h1>
+  {{ .Content }}
+
+  {{ range.Data.Pages }}
+  <article class="news-page-article">
+    <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+      {{ .Date.Format "January 2, 2006" }}
+    </time>
+    <h3>
+      <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+    </h3>
+  </article>
+  {{ end }}
+</section>
 {{ end }}
-
-{{ partial "footer.html" . }}
