--- a/themes/zone3/layouts/partials/header.html
+++ b/themes/zone3/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="container">
-    <a class="logo" href="{{ .Site.BaseURL }}">
-      Chaos <img src="./img/Chaoszone.svg" />Zone
+    <a class="logo" href="/">
+      Chaos <img src="{{ "img/Chaoszone.svg" | relURL }}" />Zone
     </a>
     <nav class="site-nav">
       <ul class="main-menu">
