--- a/themes/zone3/static/css/style.css
+++ b/themes/zone3/static/css/style.css
@@ -45,6 +45,16 @@ main {
 	font-size: clamp(1rem, 2vw, 1.2rem);
 }
 
+main img {
+	max-width: 100%;
+	height: auto;
+}
+
+main a {
+	color: red;
+	text-decoration: underline;
+}
+
 h1, h2, h3, h4, h5 {
 	font-family: var(--highlight-font);
 }
@@ -55,6 +65,16 @@ h1 {
 	margin-top: 1rem;
 }
 
+.body {
+	min-height: 100vh;
+	min-height: 100dvh;
+	display: flex;
+	flex-direction: column;
+}
+
+.body > main {
+	flex: 1 1 0%;
+}
 /** Header and Navigation ###################################################### **/
 
 header {
@@ -153,15 +173,10 @@ footer > .container > div:last-child {
 	flex-basis: auto;
 }
 
-.footer-menu {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
 
-.footer-menu  a {
+footer  a {
 	color: var(--box-bg);
-	text-decoration: none;
+	text-decoration: underline;
 }
 
 @media (orientation: portrait) {
@@ -178,30 +193,30 @@ footer > .container > div:last-child {
 	}
 }
 
-/** other ###################################################### **/
-
-
-pong-game {
-	width: 100%;
-	height: auto;
-	margin: 0 auto;
-	display: block;
-}
+/** news list ###################################################### **/
 
 .news-list {
 	list-style: none;
 	padding: 0;
 	margin: 0;
 	text-decoration: none;
+	display: flex;
+	gap: 1rem;
+	margin-bottom: 1rem;
+}
+
+.news-list li {
+	flex: 1 1 calc(33.333% - 1rem);	
 }
 
 .news-list li a {
 	display: block;
-	margin-bottom: 0.5rem;
 	background-color: var(--hl-color);
 	color: var(--menu-font-color);
 	text-decoration: none;
 	padding: 0.5rem;
+	display: block;
+	height: 100%;
 }
 
 .news-list li a:hover {
@@ -214,4 +229,276 @@ pong-game {
 	margin-bottom: 0.3em;
 }
 
+@media (orientation: portrait) { 
+	.news-list {
+		flex-direction: column;
+	}
+	
+	.news-list li {
+		flex: 1 1 100%;
+	}
+}
+
+
+/** gallery ###################################################### **/
+
+.image-gallery > p {
+	display: flex;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	gap: 1rem;
+}
+
+.image-gallery img {
+	width: calc(50% - 1rem);
+	flex: 1 1 calc(50% - 1rem);
+}
+
+@media (orientation: portrait) { 
+	.image-gallery img {
+		width: 100%;
+		flex: 1 1 100%;
+	}
+}
+
+/** cursor ######################################################**/
+
+/* Default cursor */
+body,
+body *,
+* {
+  cursor: url("/img/cursor-default.svg") 2 0, auto;
+	opacity: 1;
+}
+
+/* Hover cursor */
+body a,
+body a *,
+body button,
+body button *,
+body input[type="submit"],
+body input[type="submit"] *,
+body input[type="button"],
+body input[type="button"] *
+{
+  cursor: url("/img/cursor-pointer.svg") 12 0, pointer;
+}
+
+/* Text cursor */
+body p,
+body h1,
+body h2,
+body h3,
+body h4,
+body h5,
+body h6,
+body input[type="text"],
+body input[type="email"],
+body textarea {
+  cursor: url("/img/cursor-text.svg") 9 19, text;
+}
+
+/** news page ###################################################### **/
+
+.news-page-article {
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	padding: 1rem;
+	border: 1px solid var(--hl-color);
+}
+.news-page-article h3 {
+	margin-top: 0.5rem;
+}
+
+.news-page-article:nth-child(even) {
+	margin-left: 5rem;
+}
+
+.news-page-article:nth-child(odd) {
+	margin-right: 5rem;
+}
+
+@media (orientation: portrait) { 
+
+	.news-page-article {
+		margin-top: 1rem;
+		margin-bottom: 0;
+	}
+
+	.news-page-article:nth-child(even) {
+		margin-left: 0;
+	}
+
+	.news-page-article:nth-child(odd) {
+		margin-right: 0;
+	}
+}
+
+/** members page ###################################################### **/
+
+.members-list {
+	display: flex;
+	gap: 1rem;
+	flex-wrap: wrap;
+}
+
+.members-list > * {
+	flex: 1 1 calc(33.333% - 1rem);
+}
+
+.members-list__member {
+	border: 1px solid var(--bg-color);
+	display: flex;
+	flex-direction: column;
+}
+
+.member_logo_wrapper {
+	background-color: #fff;
+	aspect-ratio: 1 / 1;
+	padding: 1rem;
+}
+
+.member_logo_wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: scale-down;
+}
+
+.member__title {
+	display: block;
+	text-align: center;
+	font-weight: bold;
+	padding: .5rem;
+	border-top: 1px solid var(--bg-color);
+	border-bottom: 1px solid var(--bg-color);
+}
+
+.member_space {
+	flex-grow: 1;
+}
+
+.member_address, .member_email, .member_phone, .member_matrix, .member_mastodon {
+	font-size: 0.8em;
+	display: block;
+	padding: 0.1rem .5rem;
+	word-break: break-word;
+	display: flex;
+}
+
+.member_website {
+	display: block;
+	padding: 0.5rem;
+	text-align: center;
+	background-color: var(--hl-color);
+	color: var(--menu-font-color);
+}
+
+.member__icon {
+	margin-right: 0.5rem;
+	width: 1em;
+	vertical-align: middle;
+	fill: currentColor;
+	background-size: contain;
+	background-repeat: no-repeat;
+	flex: 0 0 1em;
+} 
+
+.member__icon__house {
+	background-image: url(/img/icons/house.svg);
+}
+
+.member__icon__phone {
+	background-image: url(/img/icons/phone.svg);
+}
+
+.member__icon__email {
+	background-image: url(/img/icons/email.svg);
+}
+
+.member__icon__matrix {
+	background-image: url(/img/icons/matrix.svg);
+}
+
+.member__icon__mastodon {
+	background-image: url(/img/icons/mastodon.svg);
+}
+
+@media (orientation: portrait) { 
+	.members-list > * {
+		flex: 1 1 calc(50% - 1rem);
+	}
+}
+
+@media (max-aspect-ratio: 5/8) {
+	.members-list > * {
+		flex: 1 1 100%;
+	}
+}
+
+/** projects #################################################### **/
+
+.project-page-article {
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	padding: 1rem;
+	border: 1px solid var(--hl-color);
+}
+
+/** projects - assets ########################################## **/
+
+.assets__list {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+	margin-top: 2rem;
+}
+
+.assets__item {
+	flex: 1 1 calc(33.333% - 1rem);
+	border: 1px solid var(--hl-color);
+	padding: 0.5rem;
+	display: flex;
+	gap: 0.5rem;
+	flex-direction: column;
+}
+
+.assets__item img {
+	max-width: 100%;
+	height: auto;
+	margin-bottom: 0.5rem;
+}
+
+.assets__item a {
+	display: block;
+	padding: 0.5rem;
+	text-align: center;
+	background-color: var(--hl-color);
+	color: var(--menu-font-color);
+}
+
+.assets__item__space {
+	flex-grow: 1;
+}
+
+@media (orientation: portrait) { 
+	.assets__item {
+		flex: 1 1 calc(50% - 1rem);
+	}
+}
+
+/** other ###################################################### **/
+
+
+pong-game, poly-play-game {
+	width: 100%;
+	height: auto;
+	margin: 0 auto;
+	display: block;
+}
+
+.subline {
+	font-size: 0.7em;
+	text-align: end;
+	margin-top: 1rem;
+}
 
