--- a/themes/zone/layouts/partials/footer.html
+++ b/themes/zone/layouts/partials/footer.html
@@ -1,8 +1,16 @@
-</main>
-
 <footer>
-	<p>&copy;{{ dateFormat "2006" now }} {{ .Site.Title }}</p>
-</footer>
+	<div class="container">		
+		<div>
+			If you want to talk to the people behind ChaosZone, head on over to <a href="/matrix">our Matrix Channel</a>
+		</div>
+		
+		<div>
+			To contact the administrator of this site, write to <a href="mailto:website@chaoszone.cz" class="email">website@chaoszone.cz</a>.
+		</div>
 
-</body>
-</html>
+		<div>
+			Website design by ChaosZone Team<br/>
+			&copy; {{ dateFormat "2006" now }} {{ .Site.Title }}
+		</div>
+	</div>
+</footer>
